# MCPFastAPI-updated

./: .env  .gitignore  main.py  my_database.db  pyproject.toml  requirements.txt  setup.py  setup_portable.py
app/: __init__.py  app.py
app/core/: __init__.py
app/core/base/: __init__.py  entity.py  repository.py
app/core/config/: __init__.py  observability_config.py  settings.py
app/core/database/: __init__.py  database.py
app/core/utils/: __init__.py  exceptions.py  logger.py  observability.py
app/features/: __init__.py
app/features/auth/: __init__.py  auth_route.py  auth_schemas.py  auth_utils.py  jwt.py
app/features/chat/: __init__.py  chat_entity.py  chat_repository.py  chat_route.py  chat_schemas.py
app/features/documents/: __init__.py  router.py  schemas.py  service.py
app/features/users/: __init__.py  test_user_repository.py  test_user_route.py  user_entity.py  user_repository.py  users_route.py
app/llm_functions/: AgentGraph.py  AgentLLM.py  AgentState.py  LLMCall.py  LLMDefination.py  MCPHelper.py  RAGHelper.py  ToolHelper.py  mcp_config.json
app/llm_functions/tools/: current_date.py  google_search.py  sqlite_tool.py
app/llm_functions/tools2/: current_date.py  google_search.py  toolsconfig.py
app/middleware/: __init__.py  auth_middleware.py
tests/: test_chat_isolation.py
